--- a/.github/workflows/main_api-chat-chit-be.yml
+++ b/.github/workflows/main_api-chat-chit-be.yml
@@ -21,45 +21,16 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: Install dependencies and build
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
-      
-      - name: Upload artifact for deployment job
+          npm run build
+          npm run test -- --passWithNoTests
+        env:
+          NODE_ENV: production
+
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: .
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_9356A8E604944782A129D6E7943950CA }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_7CD6C15695464456882607F2D7550DD0 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F245FDDBF7C84C46BDAFCFD4251FE0BC }}
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
-        with:
-          app-name: 'api-chat-chit-be'
-          slot-name: 'Production'
-          package: .
-          
+          name: build-output
+          path: dist/
