--- a/.github/workflows/main_api-chat-chit-be.yml
+++ b/.github/workflows/main_api-chat-chit-be.yml
@@ -16,6 +16,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Branch Lint
+        run: |
+          echo running on branch ${GITHUB_REF##*/}
+          BRANCH_NAME=${GITHUB_REF##*/}
+          PATTERN="^(STORY|TASK|BUG|SCRUM)-[0-9]+"
+          if [[ ! $BRANCH_NAME =~ $PATTERN ]]; then
+            echo "Branch name is not valid"
+            echo "Branch names must include a Jira ticket ID, e.g., PROJ-123-feature-description."
+            exit 1
+          fi
+          echo "Branch name '$BRANCH_NAME' is valid."
+
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
