--- a/.github/workflows/main_api-chat-chit-be.yml
+++ b/.github/workflows/main_api-chat-chit-be.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Branch Lint
+        shell: bash
         run: |
           echo running on branch ${GITHUB_REF##*/}
           BRANCH_NAME=${GITHUB_REF##*/}
