--- a/.github/workflows/main_api-chat-chit-be.yml
+++ b/.github/workflows/main_api-chat-chit-be.yml
@@ -19,11 +19,11 @@ jobs:
       - name: Branch Lint
         shell: bash
         run: |
-          echo running on branch ${GITHUB_REF##*/}
-          BRANCH_NAME=${GITHUB_REF##*/}
+          echo running on branch $GITHUB_BASE_REF
+          BRANCH_NAME= $GITHUB_HEAD_REF
           PATTERN="^(STORY|TASK|BUG|SCRUM|ISSUE)-[0-9]+"
           if [[ ! $BRANCH_NAME =~ $PATTERN ]]; then
-            echo "Branch name '$BRANCH_NAME' is not valid"
+            echo "Head branch name '$BRANCH_NAME' is not valid"
             echo "Branch names must include a Jira ticket ID, e.g., PROJ-123-feature-description."
             exit 1
           fi
