--- a/.github/workflows/main_api-chat-chit-be.yml
+++ b/.github/workflows/main_api-chat-chit-be.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Branch Lint
         shell: bash
         run: |
-          echo running on branch $${GITHUB_HEAD_REF##*/}
-          BRANCH_NAME= $${GITHUB_HEAD_REF##*/}
+          echo running on branch ${{ github.event.pull_request.head_ref }}
+          BRANCH_NAME= ${{ github.event.pull_request.head_ref }}
           PATTERN="^(STORY|TASK|BUG|SCRUM|ISSUE)-[0-9]+"
           if [[ ! $BRANCH_NAME =~ $PATTERN ]]; then
             echo "Head branch name '$BRANCH_NAME' is not valid"
